# flownc

./: .gitignore  00-HANDOFF.md  01-Descrição Problema Operacional.md  02-PRD_CNC_BatchEditor_v2.3.md  07-PROMPT-PESQUISA-UI.md  09-DESIGN-3-COLUNAS.md  10-PLANO-EXECUCAO-3-COLUNAS.md  CLAUDE.md  GUIA-DE-USO.md  HANDOFF.md  LESSONS.md  MEMORY.md  PLAN.md  README.md  flownc-estado.md
cnc_batch_editor/: CNC_BatchEditor.spec  PORTATIL_LEIA-ME.txt  STATUS.md  build_exe.ps1  cli.py  main.py  pyproject.toml
cnc_batch_editor/core/: __init__.py  conference.py  file_handler.py  json_store.py  library_store.py  matcher.py  models.py  preset_store.py  replacement_plan.py  settings_store.py  verifier.py
cnc_batch_editor/exemplo_lote/: PECA02.nc
cnc_batch_editor/programas_teste/: PECA01.nc  PECA02.nc  PECA03_acentos.nc
cnc_batch_editor/tests/: test_file_roundtrip.py  test_json_store.py  test_library_store.py  test_list_input_files.py  test_matcher.py  test_replacement_plan.py  test_settings_store.py  test_ui_smoke.py
cnc_batch_editor/ui/: library_dialog.py  main_window.py  preview_dialog.py
flownc/: FlowNC.spec  PORTATIL_LEIA-ME.txt  STATUS.md  app_paths.py  build_exe.ps1  cli.py  main.py  preview_combo.py  pyproject.toml  test_combo_visual.py
flownc/core/: __init__.py  batch.py  conference.py  inplace_save.py  matcher.py  models.py  publisher.py  replacer.py  scan.py  seed.py  session_log.py  settings_store.py
flownc/data/: library.json
flownc/data_default/: library.json
flownc/tests/: test_batch_validate.py  test_conference.py  test_editor_localizador.py  (+9 more)
(+212 files in other folders)
