[project]
name = "cnc-batch-editor"
version = "0.1.0"
description = "Editor seguro de substituicoes em lote para programas CNC (PRD v2.3)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["core"]
