[project]
name = "flownc"
version = "0.2.0"
description = "FlowNC: editor seguro de substituicoes em lote para programas CNC"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
build = ["pyinstaller"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["core"]
